--- a/notebooks/DEDS_WC_1.1a_Opdrachten.ipynb
+++ b/notebooks/DEDS_WC_1.1a_Opdrachten.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,25 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A,B,C,D,E,F,G\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'str' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mA,B,C,D,E,F,G\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m letter \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(letter)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
+      "A,B,C,D,E,F,G\n",
+      "\n"
      ]
     }
    ],
@@ -168,20 +158,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Uw inkomen (100) is zeer acceptabel\n"
+      "Uw inkomen () is zeer acceptabel\n"
      ]
     }
    ],
    "source": [
     "inkomen = input()\n",
-    "print(\"Uw inkomen \" + \"(\" + str(inkomen) + \") is zeer acceptabel\" )"
+    "print(\"Uw inkomen \" + \"(\" + str(inkomen) + \") is zeer acceptabel\")"
    ]
   },
   {
@@ -199,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -253,17 +243,6 @@
      "output_type": "stream",
      "text": [
       "Waarom neem je nog je ouders mee?\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -293,10 +272,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def waarheidsTabel(v1: bool, v2: bool) -> bool:\n",
+    "    if v1 == True and v2 == False:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "print(waarheidsTabel(True, True))\n",
+    "print(waarheidsTabel(True, False))\n",
+    "print(waarheidsTabel(False, True))\n",
+    "print(waarheidsTabel(False, False))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -320,8 +322,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def wachtwoord(w1: str, w2: str) -> bool:\n",
+    "    if w1 == w2:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "print(wachtwoord(\"hallo\", \"hallo\"))\n",
+    "print(wachtwoord(\"hallo\", \"doei\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,8 +358,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Philip\n"
+     ]
+    }
+   ],
+   "source": [
+    "def zoekPrins(prinses):\n",
+    "    prinsesToPrins = {\n",
+    "        \"Aurora\": \"Philip\",\n",
+    "        \"Ariel\": \"Eric\",\n",
+    "        \"Jasmine\": \"Aladdin\",\n",
+    "        \"Pocahontas\": \"John\",\n",
+    "        \"Belle\": \"Beast\",\n",
+    "        \"Tiana\": \"Naveen\",\n",
+    "        \"Mulan\": \"Shang\",\n",
+    "    }\n",
+    "\n",
+    "    return prinsesToPrins[prinses]\n",
+    "\n",
+    "\n",
+    "print(zoekPrins(\"Aurora\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -356,10 +401,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fout, probeer het opnieuw!\n",
+      "Succes!\n"
+     ]
+    }
+   ],
+   "source": [
+    "ww1 = input()\n",
+    "ww2 = input()\n",
+    "\n",
+    "while wachtwoord(ww1, ww2) == False:\n",
+    "    print(\"Fout, probeer het opnieuw!\")\n",
+    "    ww1 = input()\n",
+    "    ww2 = input()\n",
+    "\n",
+    "print(\"Succes!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -373,18 +437,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 12\u001b[0m\n\u001b[1;32m      6\u001b[0m         teller \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mtafels\u001b[39m(getal: \u001b[38;5;28mint\u001b[39m): \u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\n\u001b[0;32m---> 12\u001b[0m x: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m tafels(x)\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 x 1 = 1\n",
+      "2 x 1 = 2\n",
+      "3 x 1 = 3\n",
+      "4 x 1 = 4\n",
+      "5 x 1 = 5\n",
+      "6 x 1 = 6\n",
+      "7 x 1 = 7\n",
+      "8 x 1 = 8\n",
+      "9 x 1 = 9\n",
+      "10 x 1 = 10\n",
+      "1 x 2 = 2\n",
+      "2 x 2 = 4\n",
+      "3 x 2 = 6\n",
+      "4 x 2 = 8\n",
+      "5 x 2 = 10\n",
+      "6 x 2 = 12\n",
+      "7 x 2 = 14\n",
+      "8 x 2 = 16\n",
+      "9 x 2 = 18\n",
+      "10 x 2 = 20\n",
+      "1 x 3 = 3\n",
+      "2 x 3 = 6\n",
+      "3 x 3 = 9\n",
+      "4 x 3 = 12\n",
+      "5 x 3 = 15\n",
+      "6 x 3 = 18\n",
+      "7 x 3 = 21\n",
+      "8 x 3 = 24\n",
+      "9 x 3 = 27\n",
+      "10 x 3 = 30\n",
+      "1 x 4 = 4\n",
+      "2 x 4 = 8\n",
+      "3 x 4 = 12\n",
+      "4 x 4 = 16\n",
+      "5 x 4 = 20\n",
+      "6 x 4 = 24\n",
+      "7 x 4 = 28\n",
+      "8 x 4 = 32\n",
+      "9 x 4 = 36\n",
+      "10 x 4 = 40\n",
+      "1 x 5 = 5\n",
+      "2 x 5 = 10\n",
+      "3 x 5 = 15\n",
+      "4 x 5 = 20\n",
+      "5 x 5 = 25\n",
+      "6 x 5 = 30\n",
+      "7 x 5 = 35\n",
+      "8 x 5 = 40\n",
+      "9 x 5 = 45\n",
+      "10 x 5 = 50\n",
+      "1 x 6 = 6\n",
+      "2 x 6 = 12\n",
+      "3 x 6 = 18\n",
+      "4 x 6 = 24\n",
+      "5 x 6 = 30\n",
+      "6 x 6 = 36\n",
+      "7 x 6 = 42\n",
+      "8 x 6 = 48\n",
+      "9 x 6 = 54\n",
+      "10 x 6 = 60\n",
+      "1 x 7 = 7\n",
+      "2 x 7 = 14\n",
+      "3 x 7 = 21\n",
+      "4 x 7 = 28\n",
+      "5 x 7 = 35\n",
+      "6 x 7 = 42\n",
+      "7 x 7 = 49\n",
+      "8 x 7 = 56\n",
+      "9 x 7 = 63\n",
+      "10 x 7 = 70\n",
+      "1 x 8 = 8\n",
+      "2 x 8 = 16\n",
+      "3 x 8 = 24\n",
+      "4 x 8 = 32\n",
+      "5 x 8 = 40\n",
+      "6 x 8 = 48\n",
+      "7 x 8 = 56\n",
+      "8 x 8 = 64\n",
+      "9 x 8 = 72\n",
+      "10 x 8 = 80\n",
+      "1 x 9 = 9\n",
+      "2 x 9 = 18\n",
+      "3 x 9 = 27\n",
+      "4 x 9 = 36\n",
+      "5 x 9 = 45\n",
+      "6 x 9 = 54\n",
+      "7 x 9 = 63\n",
+      "8 x 9 = 72\n",
+      "9 x 9 = 81\n",
+      "10 x 9 = 90\n",
+      "1 x 10 = 10\n",
+      "2 x 10 = 20\n",
+      "3 x 10 = 30\n",
+      "4 x 10 = 40\n",
+      "5 x 10 = 50\n",
+      "6 x 10 = 60\n",
+      "7 x 10 = 70\n",
+      "8 x 10 = 80\n",
+      "9 x 10 = 90\n",
+      "10 x 10 = 100\n"
      ]
     }
    ],
@@ -397,7 +556,11 @@
     "        teller += 1\n",
     "\n",
     "\n",
-    "def tafels(getal: int): ...\n",
+    "def tafels(getal: int):\n",
+    "    teller: int = 1\n",
+    "    while teller <= getal:\n",
+    "        tafel(teller)\n",
+    "        teller += 1\n",
     "\n",
     "\n",
     "x: int = int(input())\n",
@@ -420,14 +583,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "huidige getal: 0\n",
       "huidige getal: 1\n",
       "huidige getal: 2\n",
       "huidige getal: 3\n",
@@ -443,9 +605,8 @@
    ],
    "source": [
     "def loopje():\n",
-    "    aantal = 0\n",
     "\n",
-    "    while aantal <= 10:\n",
+    "    for aantal in range(1, 11):\n",
     "        print(f\"huidige getal: {aantal}\")\n",
     "        aantal += 1\n",
     "\n",
@@ -464,8 +625,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
+    "def checkEven():\n",
+    "    count = 0\n",
+    "\n",
+    "    for i in range(1, 13):\n",
+    "        getal = input()\n",
+    "        if int(getal) % 2 == 0:\n",
+    "            count += 1\n",
+    "\n",
+    "    print(count)\n",
+    "\n",
+    "\n",
     "checkEven()"
    ]
   },
@@ -490,10 +670,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prijs: 50.0, Maat: M, Merk: Nike\n",
+      "Prijs: 100.0, Maat: M, Merk: Levi's, Prijs: 100.0, Broek Type: Jeans\n",
+      "Prijs: 75.0, Maat: M, Merk: Lacoste, Prijs: 75.0, Shirt Type: Polo\n",
+      "Prijs: 100.0, Maat: M, Merk: Levi's, Prijs: 100.0, Broek Type: Jeans, Blauwtint: Donkerblauw\n",
+      "Prijs: 75.0, Maat: M, Merk: Lacoste, Prijs: 75.0, Shirt Type: Polo, Kraagsoort: Korte mouw\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Kledingstuk:\n",
+    "    def __init__(self, maat: str, merk: str, prijs: float):\n",
+    "        self.prijs = prijs\n",
+    "        self.maat = maat\n",
+    "        self.merk = merk\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Prijs: {self.prijs}, Maat: {self.maat}, Merk: {self.merk}\"\n",
+    "\n",
+    "\n",
+    "class Broek(Kledingstuk):\n",
+    "    def __init__(self, broek_type: str, maat: str, merk: str, prijs: float):\n",
+    "        super().__init__(maat, merk, prijs)\n",
+    "        self.broek_type = broek_type\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Prijs: {self.prijs}, Maat: {self.maat}, Merk: {self.merk}, Prijs: {self.prijs}, Broek Type: {self.broek_type}\"\n",
+    "\n",
+    "\n",
+    "class Shirt(Kledingstuk):\n",
+    "    def __init__(self, shirt_type: str, maat: str, merk: str, prijs: float):\n",
+    "        super().__init__(maat, merk, prijs)\n",
+    "        self.shirt_type = shirt_type\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Prijs: {self.prijs}, Maat: {self.maat}, Merk: {self.merk}, Prijs: {self.prijs}, Shirt Type: {self.shirt_type}\"\n",
+    "\n",
+    "\n",
+    "class Spijkerbroek(Broek):\n",
+    "    def __init__(\n",
+    "        self, blauwtint: str, maat: str, merk: str, prijs: float, broek_type: str\n",
+    "    ):\n",
+    "        super().__init__(broek_type, maat, merk, prijs)\n",
+    "        self.blauwtint = blauwtint\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Prijs: {self.prijs}, Maat: {self.maat}, Merk: {self.merk}, Prijs: {self.prijs}, Broek Type: {self.broek_type}, Blauwtint: {self.blauwtint}\"\n",
+    "\n",
+    "\n",
+    "class Poloshirt(Shirt):\n",
+    "    def __init__(\n",
+    "        self, kraagsoort: str, maat: str, merk: str, prijs: float, shirt_type: str\n",
+    "    ):\n",
+    "        super().__init__(shirt_type, maat, merk, prijs)\n",
+    "        self.kraagsoort = kraagsoort\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Prijs: {self.prijs}, Maat: {self.maat}, Merk: {self.merk}, Prijs: {self.prijs}, Shirt Type: {self.shirt_type}, Kraagsoort: {self.kraagsoort}\"\n",
+    "\n",
+    "\n",
+    "kledingstuk = Kledingstuk(\"M\", \"Nike\", 50.0)\n",
+    "broek = Broek(\"Jeans\", \"M\", \"Levi's\", 100.0)\n",
+    "shirt = Shirt(\"Polo\", \"M\", \"Lacoste\", 75.0)\n",
+    "spijkerbroek = Spijkerbroek(\"Donkerblauw\", \"M\", \"Levi's\", 100.0, \"Jeans\")\n",
+    "poloshirt = Poloshirt(\"Korte mouw\", \"M\", \"Lacoste\", 75.0, \"Polo\")\n",
+    "\n",
+    "print(kledingstuk)\n",
+    "print(broek)\n",
+    "print(shirt)\n",
+    "print(spijkerbroek)\n",
+    "print(poloshirt)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -527,19 +781,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['Jelle', 'Marleen', 'Henk', 'Fatima', 'Jelle', 'Henk']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ls = ['Jelle', 'Marleen', 'Henk', 'Fatima', 'Jelle', 'Henk']\n",
+    "ls"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -550,10 +809,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Stan', 'Marleen', 'Henk', 'Fatima', 'Jelle', 'Henk']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls[0] = 'Stan'\n",
+    "ls"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -564,10 +837,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Jelle', 'Marleen', 'Henk', 'Fatima', 'Jelle', 'Henk')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mijn_tupel = ('Jelle', 'Marleen', 'Henk', 'Fatima', 'Jelle', 'Henk')\n",
+    "mijn_tupel"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -578,10 +865,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[28], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmijn_tupel\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStan\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      2\u001b[0m mijn_tupel\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "mijn_tupel[0] = 'Stan'\n",
+    "mijn_tupel"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -596,10 +898,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'naam': 'Jelle', 'leeftijd': 28, 'beroep': 'Docent', 'hobby': 'Volleybal'}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dic = {\n",
+    "    'naam': 'Jelle',\n",
+    "    'leeftijd': 28,\n",
+    "    'beroep': 'Docent',\n",
+    "    'hobby': 'Volleybal'\n",
+    "}\n",
+    "dic"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -610,10 +931,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'naam': 'Stan', 'leeftijd': 28, 'beroep': 'Docent', 'hobby': 'Volleybal'}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dic['naam'] = 'Stan'\n",
+    "dic"
+   ]
   }
  ],
  "metadata": {
