--- a/notebooks/DEDS_WC_1.2_en_1.3_Opdrachten.ipynb
+++ b/notebooks/DEDS_WC_1.2_en_1.3_Opdrachten.ipynb
@@ -2733,9 +2733,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (System)",
+   "display_name": "venv",
    "language": "python",
-   "name": "system-python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
